# voci

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.sh
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/co/voci/: MainActivity.kt  VociService.kt
android/app/src/main/kotlin/co/voci/audio/: SystemAudioCapture.kt
android/app/src/main/kotlin/co/voci/overlay/: OverlayManager.kt
android/app/src/main/kotlin/co/voci/stt/: DeepgramStreamingClient.kt
android/app/src/main/kotlin/co/voci/translate/: MyMemoryClient.kt
android/app/src/main/kotlin/co/voci/util/: PaginatedLine.kt
android/app/src/main/res/layout/: activity_main.xml  overlay_lines.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
scripts/: bench_dictate_backends.py  bench_parakeet.py  capture_probe.py  list_audio_sources.py  test_overlay.py
voci/: __init__.py  audio_capture.py  config.py  deepgram_rest.py  deepgram_stt.py  dictate.py  dictate_indicator.py  dictate_stt.py  hotkey.py  lingva_translate.py  local_stt.py  main.py  mic_capture.py  mymemory_translate.py  overlay.py  typer.py
voci/stt/: __init__.py  _model.py  assemblyai_stt.py  deepgram.py  parakeet_dictate.py  parakeet_streaming.py  soniox_stt.py
voci/translate/: __init__.py  _worker.py  cerebras_llm.py  gemini_llm.py  nllb.py  opus_mt.py
