[project]
name = "voci"
version = "0.2.0"
description = "Real-time speech-to-text + translation overlay with local Parakeet STT and NLLB translation."
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    # STT — NVIDIA Parakeet via NeMo (default backend)
    "nemo-toolkit[asr]>=2.0",

    # Optional alternate STT backend — Deepgram cloud (used when
    # --stt-backend deepgram is passed). Cheap dependency (~5 MB), kept
    # available so the user can A/B compare against local Parakeet.
    "deepgram-sdk>=4,<5",

    # Optional alternate STT backend — Soniox real-time WebSocket
    # (--stt-backend soniox). Sub-200ms latency cloud STT.
    "soniox>=1.6",

    # Optional alternate STT backend — AssemblyAI Universal-Streaming v3
    # (--stt-backend assemblyai). ~300ms latency, immutable finals (no
    # flicker), $50 starter credit ≈ 333 hours of streaming.
    "assemblyai>=0.36",

    # Optional alternate translation backend — Cerebras cloud LLM
    # (--translator cerebras). 1M tokens/day free, ~80-150ms inference.
    "cerebras-cloud-sdk>=1.0",

    # Optional alternate translation backend — Google Gemini via AI Studio
    # (--translator gemini). gemini-2.5-flash has very strong Arabic; paid
    # tier (~$0.04/hr) removes the free-tier 10 RPM limit so we can stream
    # partials without throttling.
    "google-genai>=1.0",

    # Translation — NLLB-200 via CTranslate2
    "ctranslate2>=4.4",
    "sentencepiece>=0.2",
    "transformers>=4.45",
    "huggingface-hub>=0.24",

    # Audio
    "numpy>=1.26,<2.0",
    "soundfile>=0.12.1",

    # GUI + hotkeys
    "PySide6>=6.7",
    "pynput>=1.7.7",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voci"]

# PyTorch CUDA 12.4 wheels — RTX 4060 + driver 580 supports cu124 runtime.
# NeMo pulls torch as a transitive dep; force the CUDA-enabled wheel.
[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["voci", "scripts"]
exclude = ["**/__pycache__", ".venv"]
reportMissingImports = "warning"
# PySide6's bundled stubs don't expose Qt enum members as class attributes
# (Qt.LeftButton, Qt.AlignCenter, etc. resolve at runtime via __getattr__),
# and NeMo / nemo_toolkit ships no type stubs at all. Both surface as
# attribute-access errors that aren't real bugs. Downgrade to warnings.
reportAttributeAccessIssue = "warning"
reportMissingTypeStubs = "none"
